Delta Transform Animation not working #79706

Closed
opened 2020-08-11 13:47:46 +02:00 by Christoph · 13 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.77

Blender Version
Broken: version: 2.90.0 Beta, branch: master, commit date: 2020-08-11 07:10, hash: bb5cc3bccf
Worked: 2.83.4
Caused by 9b867f2e90

Short description of error
Animation of Object Delta Transform not working.

Exact steps for others to reproduce the error
Select Object, create two keyframes with different Delta Transform on the timeline. Playing the animation will not change the Delta Transform in the viewport. Click into the Delta Transform Valuefield and deselect the value again will update the viewport to the correct position.

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.77 **Blender Version** Broken: version: 2.90.0 Beta, branch: master, commit date: 2020-08-11 07:10, hash: `bb5cc3bccf` Worked: 2.83.4 Caused by 9b867f2e90 **Short description of error** Animation of Object Delta Transform not working. **Exact steps for others to reproduce the error** Select Object, create two keyframes with different Delta Transform on the timeline. Playing the animation will not change the Delta Transform in the viewport. Click into the Delta Transform Valuefield and deselect the value again will update the viewport to the correct position.
Author

Added subscriber: @ChrisGraz

Added subscriber: @ChrisGraz
Author

Ok, i found out that the object is not animating when unsing only Delta Transform Keyframes. It is working again when i add a location/rotation/scale Keyframe (Not Delta). It also keeps working when this Keyframe is deleted again.
In 2.83.4 Objects can be animated using only Delta Transform.

Ok, i found out that the object is not animating when unsing only Delta Transform Keyframes. It is working again when i add a location/rotation/scale Keyframe (Not Delta). It also keeps working when this Keyframe is deleted again. In 2.83.4 Objects can be animated using only Delta Transform.

Added subscriber: @ZedDB

Added subscriber: @ZedDB

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm that animating delta transforms does not work in 2.91 alpha as well.
The numbers update, but the location is not updated in the viewport as described by the reporter.

I can confirm that animating delta transforms does not work in 2.91 alpha as well. The numbers update, but the location is not updated in the viewport as described by the reporter.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm, checking...

Can confirm, checking...
Member

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren
Member

Caused by 9b867f2e90

Not sure how many folks are animating with Delta Transform, but this being broken sounds bad... and since this is in 2.90 as well, will raise to High prio.

CC @dr.sybren

Caused by 9b867f2e90 Not sure how many folks are animating with Delta Transform, but this being broken sounds bad... and since this is in 2.90 as well, will raise to High prio. CC @dr.sybren
Sebastian Parborg self-assigned this 2020-08-12 18:02:15 +02:00

I have a fix and will push shortly

I have a fix and will push shortly

This issue was referenced by bff91b32aa

This issue was referenced by bff91b32aa75a6d35c668656726298613ac7ed5e

This issue was referenced by 051f067fb8

This issue was referenced by 051f067fb85092ba6d1098e7396bbaf742b8afe1

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79706
No description provided.