Fix T79706: Delta Transform Animation not working

The object "delta_" rna variables were not added to the depsgraph search
and thus it would not trigger updates of the object during animation
playback.